dark mode fixes

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -132,8 +132,9 @@ input, textarea
   .dark-mode &
     color: #ffffff
 
-.navbar-burger
+.navbar-burger, .burger, .navbar-menu
   .dark-mode &
+    background-color: $dark-light-background
     color: $dark-primary
 
 @import "~bulma"
